# Tokamak-Simulation-and-DPA-Calculation

./: CMakeLists.txt  LICENSE  README.md  convert_stl_ascii.py  dpa_analysis.py  generate_corrugated_torus.py  generate_vgroove_torus.py  prepare_stl.sh  run_all.sh  tokamak_sim.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
macros/: run.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
